tests/semantic/execution_plan/execution_plan.err
Error: execution plan for version 3 in file execution_plan.dl at line 21
        .plan 1: (1,2,3), 2: (3,2,1), 3: (2,3,1)
-----------------------------------------^-------
only versions 0..2 permitted
Error: Invalid execution order in plan in file execution_plan.dl at line 25
        .plan 0: (1,2,2), 1: (3,2), 2: (2,3,1,3)
-----------------^-------------------------------
Error: Invalid execution order in plan in file execution_plan.dl at line 25
        .plan 0: (1,2,2), 1: (3,2), 2: (2,3,1,3)
-----------------------------^-------------------
Error: Invalid execution order in plan in file execution_plan.dl at line 25
        .plan 0: (1,2,2), 1: (3,2), 2: (2,3,1,3)
---------------------------------------^---------
4 errors generated, evaluation aborted
